# FastMath

./: CMakeLists.txt  readme.md
include/: fast_math.h
test/: benchmark.cpp  test.cpp
